--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.2.0",
     "sanity": "3.20.0",
     "sanity-plugin-iframe-pane": "2.6.1",
-    "styled-components": "6.1.1"
+    "styled-components": "6.1.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "18.2.37",
