--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-sanity": "5.5.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.14.1",
     "sanity": "3.20.0",
     "sanity-plugin-iframe-pane": "2.6.1",
     "styled-components": "6.1.1",
