--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.0.3",
     "next-sanity": "5.5.10",
     "react": "18.2.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
     "react-player": "^2.14.1",
     "sanity": "3.20.0",
