--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "next": "14.0.3",
     "next-sanity": "5.5.10",
     "react": "18.2.0",
-    "react-advanced-news-ticker": "^1.0.1",
+    "react-advanced-news-ticker": "github:Moggach/react-advanced-news-ticker",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
     "react-player": "^2.14.1",
