--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "@sanity/vision": "3.20.0",
     "@tailwindcss/typography": "0.5.10",
     "core-js": "^3.35.0",
+    "framer-motion": "^10.18.0",
     "next": "14.0.3",
     "next-sanity": "5.5.10",
     "react": "18.2.0",
-    "react-advanced-news-ticker": "github:Moggach/react-advanced-news-ticker",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "18.2.0",
     "react-player": "^2.14.1",
-    "regenerator-runtime": "^0.14.1",
     "sanity": "3.20.0",
     "sanity-plugin-iframe-pane": "2.6.1",
     "styled-components": "6.1.1",
